plugins {
	id "java"
	id "org.springframework.boot" version "4.0.2"
	id "io.spring.dependency-management" version "1.1.7"
	id "com.diffplug.spotless" version "8.2.1"
}

group = "com.greedy"
version = "0.0.1-SNAPSHOT"

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation "org.springframework.boot:spring-boot-starter"
	implementation "org.springframework.boot:spring-boot-starter-webmvc"
	implementation "org.apache.httpcomponents.client5:httpclient5"
	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
	implementation "org.springframework.boot:spring-boot-starter-validation"
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1"
	implementation "io.sentry:sentry-spring-boot-4:8.33.0"

	compileOnly "org.projectlombok:lombok"
	annotationProcessor "org.projectlombok:lombok"

	runtimeOnly "org.postgresql:postgresql"

	testImplementation "org.springframework.boot:spring-boot-starter-test"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher"

	testCompileOnly "org.projectlombok:lombok"
	testAnnotationProcessor "org.projectlombok:lombok"

	testRuntimeOnly "com.h2database:h2"
}

tasks.register("installGitHooks", Copy) {
	from("${rootDir}/scripts/pre-commit")
	into("${rootDir}/.git/hooks")

	filePermissions {
		unix("rwxrwxr-x") // 755
	}
}

tasks.named("build") {
	dependsOn(tasks.named("installGitHooks"))
}

tasks.named("test") {
	useJUnitPlatform()
}

spotless {
	java {
		googleJavaFormat().aosp()
		removeUnusedImports()
		trimTrailingWhitespace()
		endWithNewline()
	}
}
